--- a/style.css
+++ b/style.css
@@ -1,15 +1,22 @@
-/* override default styles to a predictable value using the “universal” CSS selector (*)
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+/* override default styles to a predictable value using the “universal” CSS selector (*) */%%
+/* 當設定一個元素樣式為 box-sizing: border-box;，這個元素的內距和邊框將不會增加元素本身的寬度
+    因為 box-sizing 算是個比較新的屬性，所以應該還是要加上 -webkit- 和 -moz- 前綴（Prefixes）
+    這樣才能啟用特定瀏覽器實驗中的 CSS 特性。該屬性從 IE8+ 之後就開始支援
 
 */
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
 
 #bk {
     background-color: peachpuff;
+}
+
+#main{    
+    max-width: 800px;
+    margin: 0 auto;
 }
 
 h1 {
@@ -41,7 +48,7 @@ p {
 }
 
 .main-menu-fixed {
-    width: 100%;
+    width: 80%;
     height: 42px;
     background: floralwhite;
     /*讓選單的位置是固定的*/
@@ -79,7 +86,7 @@ p {
     /*固定在網頁上不隨卷軸移動，若要隨卷軸移動用absolute*/
     position: fixed;
     /*設置垂直位置*/
-    top: 50%;
+    top: 70%;
     /*背景顏色*/
     background: #ffffff;
     /*上下左右間距*/
